Add the ability to record parsed dependencies for a tag #250
