# app/models/tag.rb
@@ -5,8 +5,14 @@ class Tag < ApplicationRecord
 
   scope :published, -> { where('published_at IS NOT NULL') }
 
+  has_many :manifests, dependent: :destroy
+
   def to_s
-    number
+    name
+  end
+
+  def to_param
+    name
   end
 
   def semantic_version
@@ -70,17 +76,6 @@ class Tag < ApplicationRecord
     repository.host.tag_url(repository, name)
   end
 
-  # def repository_url
-  #   case repository.host_type
-  #   when 'GitHub'
-  #     "#{repository.url}/releases/tag/#{name}"
-  #   when 'GitLab'
-  #     "#{repository.url}/tags/#{name}"
-  #   when 'Bitbucket'
-  #     "#{repository.url}/commits/tag/#{name}"
-  #   end
-  # end
-
   def related_tags
     repository.sorted_tags
   end
@@ -100,5 +95,88 @@ class Tag < ApplicationRecord
   def diff_url
     return nil unless repository && previous_tag && previous_tag
     repository.compare_url(previous_tag.number, number)
+  end
+
+  def blob_url
+    repository.blob_url(name)
+  end
+
+  def parse_dependencies_async
+    ParseTagDependenciesWorker.perform_async(self.id)
+  end
+
+  def parse_dependencies
+    connection = Faraday.new(url: "https://parser.ecosyste.ms") do |faraday|
+      faraday.use Faraday::FollowRedirects::Middleware
+    
+      faraday.adapter Faraday.default_adapter
+    end
+
+    if dependency_job_id
+      res = connection.get("/api/v1/jobs/#{dependency_job_id}")
+    else  
+      res = connection.post("/api/v1/jobs?url=#{CGI.escape(download_url)}")
+    end
+    if res.success?
+      json = Oj.load(res.body)
+      record_dependency_parsing(json)
+    end
+  end
+
+  def record_dependency_parsing(json)
+    if ['complete', 'error'].include?(json['status'])
+      if json['status'] == 'complete'
+        new_manifests = json['results'].to_h.with_indifferent_access['manifests']
+        
+        if new_manifests.blank?
+          manifests.each(&:destroy)
+        else
+          new_manifests.each {|m| sync_manifest(m) }
+          delete_old_manifests(new_manifests)
+        end
+      end
+
+      update_columns(dependencies_parsed_at: Time.now, dependency_job_id: nil)
+    else
+      update_column(:dependency_job_id, json["id"]) if dependency_job_id != json["id"]
+    end
+  end
+
+  def sync_manifest(m)
+    args = {ecosystem: (m[:platform] || m[:ecosystem]), kind: m[:kind], filepath: m[:path], sha: m[:sha]}
+
+    unless manifests.find_by(args)
+      return unless m[:dependencies].present? && m[:dependencies].any?
+      manifest = manifests.create(args)
+      dependencies = m[:dependencies].map(&:with_indifferent_access).uniq{|dep| [dep[:name].try(:strip), dep[:requirement], dep[:type]]}
+
+      deps = dependencies.map do |dep|
+        ecosystem = manifest.ecosystem
+        next unless dep.is_a?(Hash)
+        next unless dep[:name].present?
+        {
+          manifest_id: manifest.id,
+          package_name: dep[:name].to_s.strip[0..255],
+          ecosystem: ecosystem,
+          requirements: dep[:requirement],
+          kind: dep[:type],
+          repository_id: self.id,
+          direct: manifest.kind == 'manifest',
+          created_at: Time.now,
+          updated_at: Time.now
+        }
+      end.compact
+
+      Dependency.insert_all(deps)
+    end
+  end
+
+  def delete_old_manifests(new_manifests)
+    existing_manifests = manifests.map{|m| [m.ecosystem, m.filepath] }
+    to_be_removed = existing_manifests - new_manifests.map{|m| [(m[:platform] || m[:ecosystem]), m[:path]] }
+    to_be_removed.each do |m|
+      manifests.where(ecosystem: m[0], filepath: m[1]).each(&:destroy)
+    end
+    manifests.where.not(id: manifests.latest.map(&:id)).each(&:destroy)
   end
 end
